funny vedion section added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="">About Us</a></li>
                     <li><a href="">Developers</a></li>
                     <li id="nav-btn"><a href="">Follow us on 
-                        <span><i class="fa-brands fa-youtube"></i></span>
+                        <span style="color: red;"><i class="fa-brands fa-youtube"></i></span>
                         <span><i class="fa-brands fa-tiktok"></i></span>
                         </a>
                     </li>
@@ -66,6 +66,34 @@
                 <p style="text-align: center;">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
                 <div class="btn-div">
                     <button>know more</button>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- online game funny video section -->
+        <section class="funny-vid-section">
+            <div class="s2-title-part">
+                <h1>Online Games <span class="i4-title">Funny Videos</span></h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+
+            <!-- funny video container -->
+            <div class="funny-vid-grid">
+                <div class="vedio-one">
+                    <iframe width="250" height="315" src="https://www.youtube.com/embed/sEO2_vrh2_Q?si=7ip1AFuhToY4QrRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
+                <div class="vedio-two">
+                    <iframe width="250"  height="315" src="https://www.youtube.com/embed/8l1CSI5yMsw?si=vBXyE7K5s6N0DqIB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
+                <div class="vedio-three">
+                    <iframe width="250" height="315" src="https://www.youtube.com/embed/gtLmkJCnLeI?si=PON5uEaZ22LgvKyI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
+                <div class="vedio-four">
+                    <iframe width="250" height="315" src="https://www.youtube.com/embed/q-JfOAhUgiA?si=Vd8VbXBhceXHYapA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
 
