section three done with responsiveness

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- main section start -->
     <main>
         <!-- section one GOAT -->
-        <section class="s1-container" style="margin-top: 40px; margin-bottom: 50px;">
+        <section class="s1-container" style="margin-top: 40px;">
             <div class="s1-item-one">
                 <h2 class="primary-title">Play Like The</h2>
                 <h1 class="goat-text">G.O.A.T.</h1>
@@ -96,7 +96,46 @@
                     <iframe width="250" height="315" src="https://www.youtube.com/embed/q-JfOAhUgiA?si=Vd8VbXBhceXHYapA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
+        </section>
 
+        <!-- horse section with a man -->
+        <section>
+            <div class="s3-container">
+                <!-- item one -->
+                <div class="s3-description">
+                    <h1><span class="i4-title">Play Instantly,</span></h1>
+                    <h1>No Downloads</h1>
+                    <h1>No Installs.</h1>
+                    <p>
+                        Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+                    </p>
+                </div>
+                
+                <!-- item two -->
+                <div class="s3-img-container">
+                    <img src="images/Rectangle 55.png" alt="">
+                    <div class="small-img">
+                        <img src="images/Rectangle 66.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="s3-container">
+                    <!-- item three -->
+                <div class="s3-another-img-container">
+                    <img src="images/Rectangle 67.png" alt="">
+                    <div class="small-img-two">
+                        <img src="images/Rectangle 78.png" alt="">
+                    </div>
+                </div>
+                <!-- item four-->
+                <div class="s3-another-description">
+                    <h1><span class="i4-title">Play Games Online ,</span></h1>
+                    <h1>Anywhere, Anytime!</h1>
+                    <p>
+                        PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <!-- main section end -->
