footer section done with responsiveness

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="font-work-sans">
     <!-- header section start -->
-    <header>
+    <header class="container">
         <nav class="nav-bar">
             <!-- left side menu -->
             <div class="logo-container">
@@ -39,7 +39,7 @@
     <!-- header section end -->
 
     <!-- main section start -->
-    <main>
+    <main class="container">
         <!-- section one GOAT -->
         <section class="s1-container" style="margin-top: 40px;">
             <div class="s1-item-one">
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <!-- horse section with a man -->
+        <!--section three: Gamer section -->
         <section>
             <div class="s3-container">
                 <!-- item one -->
@@ -141,8 +141,50 @@
     <!-- main section end -->
 
     <!-- footer section start -->
-    <footer>
+    <footer class="footer-section">
+        <div class="footer-title">
+            <div>
+                <img src="images/Frame.png" alt="">
+            </div>
+            <h1 class="gamer-title"><span id="nav-title">G</span>amer</h1>
+        </div>
 
+        <!-- footer menu grid -->
+        <div>
+            <ul class="footer-menu-list footer-common-grid">
+                <li><a href="">Our Story</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="">Web Games</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">My Account</a></li>
+            </ul>
+        </div>
+        <!-- footer icon grid -->
+        <div>
+            <ul class="footer-icon-list footer-common-grid">
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-youtube"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
+                <li><i class="fa-brands fa-github"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+            </ul>
+        </div>
+
+        <!-- footer statement grid -->
+        <div>
+            <ul class="footer-option-list">
+                <li><a href="">Terms and Conditions</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Cookie Policy</a></li>
+                <li><a href="">Privacy Settings</a></li>
+            </ul>
+        </div>
+        <!-- copyright -->
+        <div class="footer-copyright">
+            <p>Play Games @ Gamer @ 2000-2024 Gamer Bangladesh</p>
+        </div>
     </footer>
     <!-- footer section end -->
     
